--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./src/css/global.css">
   <link rel="stylesheet" href="./src/css/reader.css">
   <link rel="stylesheet" href="./src/css/comida-oriental.css">
+  <link rel="stylesheet" href="./src/css/forma-tradicional.css">
   
 </head>
 <body>
@@ -33,7 +34,7 @@
     <section class="comida-oriental">
       <div class="infor-comida">
         <h1 class="titulo">Comida Oriental</h1>
-        <p>A culinária Japonesa é bastante equilibrada, sendo muito rica em peixes (ômega 3), vegetais, massas e ingredientes frescos.</p>
+        <p class="texto">A culinária Japonesa é bastante equilibrada, sendo muito rica em peixes (ômega 3), vegetais, massas e ingredientes frescos.</p>
 
         <button>Cardápio</button>
       </div>
@@ -44,13 +45,13 @@
     </section>
 
     <section class="forma-tradicional">
-      <div>
+      <div class="img-segurando-prato">
         <img src="./src/imagens/img-segurando-prato.jpg" alt="Mãos Segurando Prato">
       </div>
 
-      <div>
-        <h2>Feita de forma Tradicional</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <div class="infor-prato">
+        <h2 class="titulo">Feita de forma Tradicional</h2>
+        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <a href="#">Ler mais sobre o modo de preparo </a>
       </div>
     </section>
