menu, cabeçalho responsivo

--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo">
-      <img src="src/imagens/logo-foodjp.png" alt="Logo FoodJP">
-    </div>
+    
+    <div class="navegacao">
+      <a href="#">
+        <img src="src/imagens/logo-foodjp.png" alt="Logo FoodJP">
+      </a>
+    
+      <nav>
+        <input id="menu-hamburguer" type="checkbox"/>
+        <label for="menu-hamburguer">
+          <div class="menu">
+            <span class="hamburguer"></span>
+          </div>
+        </label>
 
-    <nav>
-      <ul class="menu">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Cardápio</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><button class="btn-header">Entrar</button></li>
-      </ul>
-    </nav>
+        <ul class="menu-desktop">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Cardápio</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><button class="btn-header">Entrar</button></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
