html, img section pratos mais populares

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./src/css/reader.css">
   <link rel="stylesheet" href="./src/css/comida-oriental.css">
   <link rel="stylesheet" href="./src/css/forma-tradicional.css">
+  <link rel="stylesheet" href="./src/css/populares.css">
   
 </head>
 <body>
@@ -64,6 +65,27 @@
         <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         <a href="#">Ler mais sobre o modo de preparo </a>
       </div>
+    </section>
+
+    <section class="mais-populares">
+      <div class="titulo-mais-populares">
+        <h2 class="titulo">Mias Populares</h2>
+      </div>
+
+      <div class="comidas">
+        <div>
+          <img src="./src/imagens/ramen-frango.png" alt="Ramen Frango">
+        </div>
+
+        <div>
+          <img src="./src/imagens/ramen-apimentado.png" alt="Ramen Apimentado">
+        </div>
+
+        <div>
+          <img src="./src/imagens/ramen-tradicional.png" alt="Ramen Tradicional">
+        </div>
+      </div>
+
     </section>
 
     <!-- <section class="comments-container">
