ajuste na section forma tradicional

--- a/index.html
+++ b/index.html
@@ -62,30 +62,47 @@
 
       <div class="infor-prato">
         <h2 class="titulo">Feita de forma Tradicional</h2>
-        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-        <a href="#">Ler mais sobre o modo de preparo </a>
+        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#">Ler mais sobre o modo de preparo</a>
       </div>
     </section>
 
     <section class="mais-populares">
-      <div class="titulo-mais-populares">
+      <div>
         <h2 class="titulo">Mias Populares</h2>
       </div>
 
       <div class="comidas">
-        <div>
-          <img src="./src/imagens/ramen-frango.png" alt="Ramen Frango">
+        <div class="frango">
+          <div class="img-pratos">
+            <img src="./src/imagens/ramen-frango.png" alt="Ramen Frango">
+          </div>
+
+          <p class="nome-prato">Ramen de Frango</p>
+          <p class="descricao-prato">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          <p class="preco-prato">R$ 30</p>
         </div>
 
-        <div>
-          <img src="./src/imagens/ramen-apimentado.png" alt="Ramen Apimentado">
+        <div class="apimentado">
+          <div class="img-pratos">
+            <img src="./src/imagens/ramen-apimentado.png" alt="Ramen Apimentado">
+          </div>
+
+          <p class="nome-prato">Ramen Apimentado</p>
+          <p class="descricao-prato">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          <p class="preco-prato">R$ 30</p>
         </div>
 
-        <div>
-          <img src="./src/imagens/ramen-tradicional.png" alt="Ramen Tradicional">
+        <div class="tradicional">
+          <div class="img-pratos">
+            <img src="./src/imagens/ramen-tradicional.png" alt="Ramen Tradicional">
+          </div>
+
+          <p class="nome-prato">Ramen Tradicional</p>
+          <p class="descricao-prato">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          <p class="preco-prato">R$ 30</p>
         </div>
       </div>
-
     </section>
 
     <!-- <section class="comments-container">
