--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./src/css/comida-oriental.css">
   <link rel="stylesheet" href="./src/css/forma-tradicional.css">
   <link rel="stylesheet" href="./src/css/populares.css">
+  <link rel="stylesheet" href="./src/css/comentarios.css">
   
 </head>
 <body>
@@ -78,7 +79,7 @@
             <img src="./src/imagens/ramen-frango.png" alt="Ramen Frango">
           </div>
 
-          <p class="nome-prato">Ramen de Frango</p>
+          <p class="titulo-2">Ramen de Frango</p>
           <p class="descricao-prato">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           <p class="preco-prato">R$ 30</p>
         </div>
@@ -88,7 +89,7 @@
             <img src="./src/imagens/ramen-apimentado.png" alt="Ramen Apimentado">
           </div>
 
-          <p class="nome-prato">Ramen Apimentado</p>
+          <p class="titulo-2">Ramen Apimentado</p>
           <p class="descricao-prato">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           <p class="preco-prato">R$ 30</p>
         </div>
@@ -98,32 +99,49 @@
             <img src="./src/imagens/ramen-tradicional.png" alt="Ramen Tradicional">
           </div>
 
-          <p class="nome-prato">Ramen Tradicional</p>
+          <p class="titulo-2">Ramen Tradicional</p>
           <p class="descricao-prato">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           <p class="preco-prato">R$ 30</p>
         </div>
       </div>
     </section>
 
-    <!-- <section class="comments-container">
-      <article class="title-container">
-         <h2 class="title">Comentários</h2>
-      </article>
+    <section class="comentarios">
+      <h2 class="titulo">Comentários</h2>
+    
+      <div class="avaliacoes">
+          <div class="img-profile-1">
+            <img src="./src/imagens/img-profile-1.png" alt="profile image">
+            <h4 class="titulo-2">Daniele Almeida</h4>
+            <p class="texto">Ótimo serviço! Encantada com a qualidade dos pratos.</p>
 
-     <section class="comments">
-         <div class="comment-content">
-             <img src="https://images.pexels.com/photos/15787374/pexels-photo-15787374.jpeg" alt="profile-image" class="image-profile">
-             <h4 class="name-person">Carlos Nunes</h4>
-             <p class="comment-text">Ótimo serviço! Encantada com a qualidade dos pratos.</p>
+            <div class="star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+            </div>
+          </div>
 
-             <div class="evaluation">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 
-             </div>
+          <div class="img-profile-2">
+            <img src="./src/imagens/img-profile-2.png" alt="profile image">
+            <h4 class="titulo-2">Ricardo França</h4>
+            <p class="texto">Não é apenas a comida excelente, o serviço torna a experiência especial.</p>
+
+            <div class="star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+              <img src="src/imagens/star.png" alt="icon-star">
+            </div>
+          </div>
+      </div>
+    </section>
+
+
+            <!-- 
          </div>
 
          <div class="comment-content">
