Section localização iframe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./src/css/forma-tradicional.css">
   <link rel="stylesheet" href="./src/css/populares.css">
   <link rel="stylesheet" href="./src/css/comentarios.css">
+  <link rel="stylesheet" href="./src/css/location.css">
   
 </head>
 <body>
@@ -70,7 +71,7 @@
 
     <section class="mais-populares">
       <div>
-        <h2 class="titulo">Mias Populares</h2>
+        <h2 class="titulo">Mais Populares</h2>
       </div>
 
       <div class="comidas">
@@ -140,35 +141,51 @@
       </div>
     </section>
 
+    <section class="location">
+      <h2 class="titulo">Localização</h2>
+    
+      <div class="image-of-maps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10826.099133855085!2d-41.46571208972469!3d-22.11011958674009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1678843056605!5m2!1spt-BR!2sbr" width="100%" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+      </div>
+    </section>
 
-            <!-- 
-         </div>
+    <footer class="rodape">
 
-         <div class="comment-content">
-             <img src="src/imagens/img profile 2.png" alt="profile-image" class="image-profile">
-             <h4 class="name-person">Ricardo França</h4>
-             <p class="comment-text">Não é apenas a comida excelente, o serviço torna a experiência especial.</p>
+    </footer>
+  </main>
 
-             <div class="evaluation">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                <img src="src/imagens/star.png" alt="" class="icon-star">
-                 <img src="src/imagens/star.png" alt="" class="icon-star">
-                 
-             </div>
-         </div>
-     </section>
- </section>
+  <footer>
+
+  <!-- <img src="src/imagens/FoodJP.png" alt="">
+  <div class="footer-container">
+    <div class="contact">
+      <h2 class="titles-footer">Contato</h2>
+      <ul class="list-links">
+          <li><a href="" class="link-footer">+55 21 9999-9999</a></li>
+          <li><a href="" class="link-footer">email@gmail.com</a></li>
+      </ul>
+  </div>
+  <div class="about-me">
+      <h2 class="titles-footer">Sobre nós</h2>
+      <ul class="list-links">
+          <li><a href="" class="link-footer">Menu</a></li>
+          <li><a href="" class="link-footer">Valores</a></li>
+          <li><a href="" class="link-footer">Pagina principal</a></li>
+      </ul>
+  </div>
+
+  <div class="work">
+      <h2 class="titles-footer">Serviços</h2>
+      <ul class="list-links">
+          <li><a href="" class="link-footer">Entrega</a></li>
+          <li><a href="" class="link-footer">Retirada</a></li>
+      </ul>
+  </div>
+</div> -->
+</footer>
 
 
-
-<section class="location">
- <h2 class="title">Localização</h2>
- <div class="image-of-maps">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10826.099133855085!2d-41.46571208972469!3d-22.11011958674009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1678843056605!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
-     <img src="src/imagens/mapa-rio.png" alt="">
- </div>
+   <!-- 
  <div class="input-search">
      <form action="">
 
@@ -179,37 +196,8 @@
      </form>
  </div>
 </section> -->
-  </main>
-
-  <!-- <footer>
-    <img src="src/imagens/FoodJP.png" alt="">
- <div class="footer-container">
-            <div class="contact">
-        <h2 class="titles-footer">Contato</h2>
-        <ul class="list-links">
-            <li><a href="" class="link-footer">+55 21 9999-9999</a></li>
-            <li><a href="" class="link-footer">email@gmail.com</a></li>
-        </ul>
-    </div>
-    <div class="about-me">
-        <h2 class="titles-footer">Sobre nós</h2>
-        <ul class="list-links">
-            <li><a href="" class="link-footer">Menu</a></li>
-            <li><a href="" class="link-footer">Valores</a></li>
-            <li><a href="" class="link-footer">Pagina principal</a></li>
-        </ul>
-    </div>
-
-    <div class="work">
-        <h2 class="titles-footer">Serviços</h2>
-        <ul class="list-links">
-            <li><a href="" class="link-footer">Entrega</a></li>
-            <li><a href="" class="link-footer">Retirada</a></li>
-        </ul>
-    </div>
- </div>
-</footer> -->
 
   <script src="script.js"></script>
+
 </body>
 </html>
