Footer e correção da centralização dos pratos no responsivo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./src/css/populares.css">
   <link rel="stylesheet" href="./src/css/comentarios.css">
   <link rel="stylesheet" href="./src/css/location.css">
+  <link rel="stylesheet" href="./src/css/footer.css">
   
 </head>
 <body>
@@ -150,40 +151,30 @@
     </section>
 
     <footer class="rodape">
+      <div class="logo-rodape">
+        <img src="./src/imagens/logo-foodjp.png" alt="Logo FoodJP">
+      </div>
 
+      <div class="contact">
+        <h4>Contato</h4>
+        <p>+55 21 9999-9999</p>
+        <p>email@gmail.com</p>
+      </div>
+
+      <div class="sobre-nos">
+        <h4>Sobre Nós</h4>
+        <p>Menu</p>
+        <p>Valores</p>
+        <p>Pagina principal</p>
+      </div>
+
+      <div class="servico">
+        <h4>Seviços</h4>
+        <p>Entrega</p>
+        <p>Retirada</p>
+      </div>
     </footer>
   </main>
-
-  <footer>
-
-  <!-- <img src="src/imagens/FoodJP.png" alt="">
-  <div class="footer-container">
-    <div class="contact">
-      <h2 class="titles-footer">Contato</h2>
-      <ul class="list-links">
-          <li><a href="" class="link-footer">+55 21 9999-9999</a></li>
-          <li><a href="" class="link-footer">email@gmail.com</a></li>
-      </ul>
-  </div>
-  <div class="about-me">
-      <h2 class="titles-footer">Sobre nós</h2>
-      <ul class="list-links">
-          <li><a href="" class="link-footer">Menu</a></li>
-          <li><a href="" class="link-footer">Valores</a></li>
-          <li><a href="" class="link-footer">Pagina principal</a></li>
-      </ul>
-  </div>
-
-  <div class="work">
-      <h2 class="titles-footer">Serviços</h2>
-      <ul class="list-links">
-          <li><a href="" class="link-footer">Entrega</a></li>
-          <li><a href="" class="link-footer">Retirada</a></li>
-      </ul>
-  </div>
-</div> -->
-</footer>
-
 
    <!-- 
  <div class="input-search">
