--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./src/css/populares.css">
   <link rel="stylesheet" href="./src/css/comentarios.css">
   <link rel="stylesheet" href="./src/css/location.css">
+  <link rel="stylesheet" href="./src/css/input.css">
   <link rel="stylesheet" href="./src/css/footer.css">
   
 </head>
@@ -150,6 +151,23 @@
       </div>
     </section>
 
+    <section class="input">
+      <div class="search-local">
+        <div class="icon">
+          <ion-icon name="location-outline"></ion-icon>
+        </div>
+      
+        <input type="text" placeholder="Localização para entrega">
+        <button>
+          <a href="#">Buscar</a>
+          <ion-icon name="search-outline" class="search-icon"></ion-icon>
+        </button>
+      </div>
+
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </section>
+
     <footer class="rodape">
       <div class="logo-rodape">
         <img src="./src/imagens/logo-foodjp.png" alt="Logo FoodJP">
@@ -175,20 +193,6 @@
       </div>
     </footer>
   </main>
-
-   <!-- 
- <div class="input-search">
-     <form action="">
-
-     <span for="" class="icon"> <i class="ri-map-pin-line"></i> </span>
-     <input type="text" class="search-location input" placeholder="Localização para entrega">
-     <input type="submit" class="search-btn" value="Buscar"> 
-     
-     </form>
- </div>
-</section> -->
-
-  <script src="script.js"></script>
 
 </body>
 </html>
