responsive rodapé e location

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <p>Pagina principal</p>
       </div>
 
-      <div class="servico">
+      <div class="servicos">
         <h4>Seviços</h4>
         <p>Entrega</p>
         <p>Retirada</p>
